フラッシュメッセージの設定

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -1,5 +1,6 @@
 ---
 ja:
+
   date:
     abbr_day_names:
     - 日
@@ -207,14 +208,22 @@ ja:
       title: 'ユーザー登録'
       to_login_page: 'ログインページへ'
       create: 'ユーザー登録'
-  posts:
-    new:
-      create: '新規投稿'
+    create:
+      success: 'ユーザー登録が完了しました'
+      fail: 'ユーザー登録に失敗しました'
   user_sessions:
     new:
       title: 'ログイン'
       to_register_page: '登録ページへ'
       password_forget: 'パスワードをお忘れの方はこちら'
+    create:
+      success: 'ログインしました'
+      fail: 'ログインに失敗しました'
+    destroy:
+      success: 'ログアウトしました'
+  posts:
+    new:
+      create: '新規投稿'
   boards:
     index:
       title: '掲示板一覧'
