課題22 [管理画面] 管理画面へのログイン機能、管理画面トップページの作成

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -215,6 +215,7 @@ ja:
       edit: '編集'
       updated: 'ユーザーを更新しました'
       not_updated: 'ユーザーを更新できませんでした'
+      not_authorized: '権限がありません'
   users:
     new:
       title: 'ユーザー登録'
@@ -272,3 +273,15 @@ ja:
     update:
       success: 'パスワードを変更しました'
       fail: 'パスワードの変更に失敗しました'
+  admin:
+    user_sessions:
+      new:
+        title: 'ログイン'
+      create:
+        success: 'ログインしました'
+        fail: 'ログインに失敗しました'
+      destroy:
+        success: 'ログアウトしました'
+    dashboards:
+      index:
+        title: 'ダッシュボード'
