サイドバーのアクティブクラスを修正

--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -4,6 +4,9 @@ ja:
       user: 'ユーザー'
       board: '掲示板'
     attributes:
+      id: 'ID'
+      created_at: '作成日時'
+      updated_at: '更新日時'
       user:
         email: 'メールアドレス'
         password: 'パスワード'
@@ -12,7 +15,16 @@ ja:
         first_name: '名'
         full_name: '氏名'
         avatar: 'アバター'
+        role: '権限'
       board:
         title: 'タイトル'
         body: '本文'
         image: 'サムネイル'
+        user: '作成者'
+      comment:
+        body: 'コメント'
+  enums:
+    user:
+      role:
+        general: '一般'
+        admin: '管理者'
