--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -202,15 +202,18 @@ ja:
   defaults:
     login: 'ログイン'
     register: '登録'
+    logout: 'ログアウト'
     post: '投稿'
     search_word: '検索ワード'
+    show: '詳細'
     edit: '編集'
+    delete: '削除'
     password_reset: 'パスワードリセット'
-    logout: 'ログアウト'
+    unspecified: '指定なし'
     message:
+      require_login: 'ログインしてください'
       created: '%{item}を作成しました'
       not_created: '掲示板を作成できませんでした'
-      require_login: 'ログインしてください'
       delete_confirm: '削除しますか？'
       edit: '編集'
       updated: 'ユーザーを更新しました'
@@ -285,3 +288,17 @@ ja:
     dashboards:
       index:
         title: 'ダッシュボード'
+    users:
+      index:
+        title: 'ユーザー一覧'
+      edit:
+        title: 'ユーザー編集'
+      show:
+        title: 'ユーザー詳細'
+    boards:
+      index:
+        title: '掲示板一覧'
+      edit:
+        title: '掲示板編集'
+      show:
+        title: '掲示板詳細'
